<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="infs3611.discover.Activity.MainActivity"
    android:background="@drawable/main_gradient_bg_color">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        android:layout_marginTop="82dp"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:padding="@dimen/edit_text_padding"/>
        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:padding="@dimen/edit_text_padding"/>
        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="@string/forgotPassword"
            android:textSize="12sp"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorGrey"
            android:layout_margin="7dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/black_button_with_corners"/>
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/signUp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/transparent_button_background_white_stroke"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
