<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGrey"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_gradient_bg_color"
        android:padding="@dimen/background_layout_margin"
        android:text="more"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/main_header_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/background_layout_margin"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/background_layout_margin"
            android:background="@drawable/layout_shadow"
            android:elevation="@dimen/elevation_shadow"
            android:orientation="vertical"
            android:padding="@dimen/edit_text_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/changePhotoButton"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/button_padding"
                android:background="@color/colorTransparent"
                android:gravity="left"
                android:text="@string/changePhoto"
                android:textAllCaps="false"
                android:textColor="@color/colorTextGrey" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/button_padding"
                android:background="@color/colorTransparent"
                android:gravity="left"
                android:text="@string/changePassword"
                android:textAllCaps="false"
                android:textColor="@color/colorTextGrey" />

        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_header_text_size"
            android:background="@color/colorTransparent"
            android:gravity="left"
            android:text="@string/logout" />


    </LinearLayout>
</LinearLayout>