<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGrey"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/main_gradient_bg_color">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/transparent_button_background_white_stroke"
            android:padding="@dimen/button_padding"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/background_layout_margin"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:gravity="center"
                android:hint="@string/fullName"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/studentIDEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:gravity="center"
                android:hint="@string/zID"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/studyFieldSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/facultySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_gravity="center"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/programSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/verifyPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:gravity="center"
                android:hint="@string/verifyPassword"
                android:inputType="textPassword"
                android:textSize="@dimen/text_size" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_box_height"
                android:layout_margin="@dimen/edit_text_larger_padding"
                android:background="@drawable/edit_text_box"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/memberCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/member"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.319"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/execCheckBox"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <CheckBox
                    android:id="@+id/execCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="33dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/executives"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_marginTop="@dimen/background_layout_margin"
                android:background="@drawable/black_button_with_corners"
                android:padding="@dimen/button_padding"
                android:text="@string/signUp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>