<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popupBioEditLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_shadow"
    android:padding="@dimen/edit_text_larger_padding">

    <EditText
        android:id="@+id/editBioEditText"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/writeBio"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editBioCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/transparent_button_background_peach_stroke"
        android:text="@string/cancel"
        android:textColor="@color/colorPeach"
        app:layout_constraintEnd_toStartOf="@+id/editBioSaveButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBioEditText" />

    <Button
        android:id="@+id/editBioSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/peach_button_with_corners"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBioEditText" />
</android.support.constraint.ConstraintLayout>